--- a/README.html
+++ b/README.html
@@ -142,11 +142,11 @@ grad_norm_clip    = 5.0</code></pre>
 <p>It did reach score 0.5 over the last 100 episodes at episode 1413 and actually reached 0.8 (avrg. last 100).<br />
 See the actual project report for details.</p>
 <h2 id="video">Video</h2>
-<p>The file &quot;test11s.3gp&quot; contains about 30 seconds of video showing the model from &quot;test11&quot; playing. This should be reproducable by:</p>
+<p>The file &quot;test11s.webm&quot; contains about 30 seconds of video showing the model from &quot;test11&quot; playing. This should be reproducable by:</p>
 <pre><code>python ms_drlnd_collab_comp.py test11s.ini</code></pre>
 <p>(&quot;s&quot; for show, models must be unzipped in the same directory)</p>
-<video src="test11s.webm" poster="video_test11s.png" width="600" controls preload>
-</video>
+<p>(I'm trying to embed the video here, but I fear github is not showing this. Why?)<br />
+<video src="test11s.webm" poster="video_test11s.png" width="600" controls preload></video></p>
 <h1 id="misc">Misc</h1>
 <h2 id="additional-remarks">Additional remarks</h2>
 <p>The solution I found was DDPG where both agents used the same actor and critic with a joined replay buffer. I experimented with a version, where the networks were seperate (each agent had it's own critics and actors and a seperate replay buffer), but this version never reached a sustained 0.5 score;<br />
@@ -164,5 +164,5 @@ see script &quot;ms_drlnd_collab_comp_sep.py&quot;.</p>
 Except for the simulation-runs that did solve the task; for these, additional models were saved; more precisly the models at the end of the episode with the highest score after the task was solved (avrg. 0.5 for last 100) are saved with the additional &quot;_max&quot;- indicator in names.</p>
 <h2 id="see-also">See also</h2>
 <ul>
-<li>report.pdf: the project report, will contain additional information, but is not finished yet :-)</li>
+<li>report.pdf: the project report, contains additional information</li>
 </ul>
